Images local pathes fixed

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -9208,7 +9208,7 @@ body {
 .header {
   padding-top: 35px;
   height: 1170px;
-  background: url("/assets/img/bgd.jpg") center center no-repeat;
+  background: url("../img/bgd.jpg") center center no-repeat;
   background-size: cover;
 }
 
@@ -9325,7 +9325,7 @@ body {
 }
 
 .works {
-  background: url("/assets/img/DeathtoStock_Wired3.jpg") 50% 50% no-repeat;
+  background: url("../img/DeathtoStock_Wired3.jpg") 50% 50% no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -9375,7 +9375,7 @@ body {
 
 .services-box--hero {
   max-width: 410px;
-  background: url("/assets/img/unsplash_523ae1f5502d6_1.jpg") center center no-repeat;
+  background: url("../img/unsplash_523ae1f5502d6_1.jpg") center center no-repeat;
   background-size: cover;
   flex-direction: column;
   justify-content: flex-start;
