Burger menu fixed

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -96,6 +96,9 @@ body {
     font-family: 'Proxima Nova', Georgia, sans-serif;
     font-size: 24px;
     text-transform: uppercase;
+    &:not(:first-child) {
+      // background: rgba(#9f9acf, 1);
+    }
     & img {
       max-height: 4rem;
     }
